trying to fix logino box on mobile

--- a/api-cdn/static/css/sitestyle.scss
+++ b/api-cdn/static/css/sitestyle.scss
@@ -332,6 +332,13 @@ a {
   }
 
 
+  .form-login {
+    padding-top: 7px;
+    float:none;
+    margin-right:10px;
+  }
+
+
   .siteSearch {
     display: block;
     vertical-align: top;
